# efteraarslejr.dk

./: index.html
2020/stopmotion/: mk_filler.py  mk_movie.py  pyproject.toml
2020/tv-banko/: gen_data.py  index.html
2021/: logo.eps
2021/tilmelding/: index.html
2022/: invitation22.sla
2022/tilmelding/: index.html
